chore(Datagrid): fix sticky action columns and empty toolbar issue (#2171)
* chore(Datagrid): fix sticky action columns and empty toolbar issue

* chore(Datagrid): remove custom scrollbar styles

--- a/packages/cloud-cognitive/src/components/Datagrid/styles/_datagrid.scss
+++ b/packages/cloud-cognitive/src/components/Datagrid/styles/_datagrid.scss
@@ -153,9 +153,12 @@
     overflow-x: auto;
   }
 
-  .#{$block-class}__table-simple {
-    overflow: hidden;
+  table.#{$block-class}__table-simple {
+    display: flex;
+    overflow: auto;
     max-height: 100%;
+    flex-direction: column;
+    background-color: $ui-01;
   }
 
   .#{$block-class}__head {
@@ -333,14 +336,6 @@
   min-width: 0 !important;
 }
 
-.#{$block-class}__table-simple::-webkit-scrollbar {
-  width: 6px;
-  background-color: $ui-background;
-}
-
-.#{$block-class}__table-simple::-webkit-scrollbar-thumb {
-  background-color: $text-03;
-}
 .#{$block-class}__sticky.#{$block-class}__simple-body {
   overflow: auto;
 }
